--- a/404.html
+++ b/404.html
@@ -1,46 +1,29 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-<!-- 设置内容的编码格式 -->
-<meta charset="utf-8"/>
-<!-- 设置查询关键字 -->
-<meta name="keywords" content="404页"/>
-<!-- 设置网页的描述信息 -->
-<meta name="distribution" content="Coco5666.github.io/about"/>
-<!-- 设置作者 -->
-<meta name="author" content="Coco56"/>
-<link rel="icon" href="../title.ico" type="image/icon"/>
-<title>Coco56 GitHub个人主页 | 404 Not Found页</title>
-</head>
-
-<body>
-<br>
-<h1>本页地址： <a href="https://coco5666.github.io/404" target="_blank" title="">https://coco5666.github.io/404</a></h1>
-<!-- 绘制一根线 -->
-<hr width="100%" align = "left" />
-对不起，您所访问的页面不存在或者已删除。
-
-<h1>博客首页：<a href="https://coco5666.github.io/blog" target="_blank" title="">https://coco5666.github.io/blog</a></h1>
-
-<h2><div id="countdown"></div></h2>
-
-<script language="javascript" type="text/javascript">
-    var time = 3
-    var divLabel = document.getElementById("countdown")
-    var label = "秒钟后系统将帮您自动跳转到博客首页。"
-    divLabel.innerHTML = time.toString() + label
-    function updateTime(){
-        time = time-1
-        if(time>=0){ divLabel.innerHTML = time.toString() + label }
-        else{ divLabel.innerHTML = "正在跳转到关于&amp;联系我，请稍后。。。" }
-    }
-    setInterval("updateTime()",1000);
-    setTimeout("javascript:location.href='https://coco5666.github.io/blog'", time*1000);
-</script>
-
-</body>
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
+        <title>错误页测试</title>
+        <meta name="keywords" content="错误页测试" />
+        <meta name="description" content="错误页测试"/>
+        <link rel="icon" href="./favicon.ico" type="image/x-icon"/>
+    </head>
+    <body>
+        <div class="body" style="display: none"></div>
+        <script>
+          //  var hayconfig = {
+          //      errocde: "./success.svg",
+          //      errortitle: "测试",
+          //      errordesc: "测试1111",
+          //      errorifc1title: "",
+          //      errorifc1desc: "",
+          //      errorifc2title: "",
+          //      errorifc2desc: "",
+          //      errorfooter: "测试"
+          //  }
+        </script>
+        <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://static.hayfuon.cn/haycloud/host/easypanel/static/js/main.js"></script>
+    </body>
 </html>
-————————————————
-版权声明：本文为CSDN博主「COCO56」的原创文章，遵循CC 4.0 BY-SA版权协议，转载请附上原文出处链接及本声明。
-原文链接：https://blog.csdn.net/COCO56/article/details/101521141
