--- a/404.html
+++ b/404.html
@@ -4,24 +4,19 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
-        <title>错误页测试</title>
-        <meta name="keywords" content="错误页测试" />
-        <meta name="description" content="错误页测试"/>
-        <link rel="icon" href="./favicon.ico" type="image/x-icon"/>
+        <title>不存在的页面</title>
+        <meta name="keywords" content="404,HayFuon,海异数据" />
+        <meta name="description" content="海异数据，不存在的页面"/>
+        <link rel="icon" href="https://static.hayfuon.cn/haycloud/host/easypanel/static/favicon.ico" type="image/x-icon"/>
     </head>
     <body>
         <div class="body" style="display: none"></div>
         <script>
-          //  var hayconfig = {
-          //      errocde: "./success.svg",
-          //      errortitle: "测试",
-          //      errordesc: "测试1111",
-          //      errorifc1title: "",
-          //      errorifc1desc: "",
-          //      errorifc2title: "",
-          //      errorifc2desc: "",
-          //      errorfooter: "测试"
-          //  }
+           var hayconfig = {
+               errocde: "https://static.hayfuon.cn/haycloud/host/easypanel/static/img/404.svg",
+               errortitle: "404",
+               errordesc: "你访问的页面不存在"
+           }
         </script>
         <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://static.hayfuon.cn/haycloud/host/easypanel/static/js/main.js"></script>
