--- a/404.html
+++ b/404.html
@@ -1,24 +1,16 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
-        <title>不存在的页面</title>
-        <meta name="keywords" content="404,HayFuon,海异数据" />
-        <meta name="description" content="海异数据，不存在的页面"/>
-        <link rel="icon" href="https://static.hayfuon.cn/haycloud/host/easypanel/static/favicon.ico" type="image/x-icon"/>
-    </head>
-    <body>
-        <div class="body" style="display: none"></div>
-        <script>
-           var hayconfig = {
-               errocde: "https://static.hayfuon.cn/haycloud/host/easypanel/static/img/404.svg",
-               errortitle: "404",
-               errordesc: "你访问的页面不存在"
-           }
-        </script>
-        <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="https://static.hayfuon.cn/haycloud/host/easypanel/static/js/main.js"></script>
-    </body>
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>   
+    <title>404 - 您所访问的页面不存在</title>
+</head>
+<body>
+<center>
+    <h1>404 - 您所访问的页面不存在</h1>
+</center>
+<hr>
+<center>HayFuon</center>
+</body>
 </html>
